# SPARQ

./: .gitignore  CHANGES.md  README.md  config.toml  config_v1.toml  pyproject.toml  todo.md
claude_context/: CHAPTER_CONTEXT.md  sparq_chapter_draft.md
data/: Q_dataset.json
docs/: README.md  artifact_organizer.md  chapter_sparq_architecture.md  concurrency.md  experiment_output_schema.md  improvements.md  migration_langchain_langgraph.md  multi_turn_support.md  parallel_execution.md  repl.md  repl_architecture.md  run_monitor_web_ui.md  subtask_parallelism.md  thesis_angle.md.gpg  tui_migration.md  weather_tool.md  web_ui_migration.md  why_not_deepagents.md
docs/aws/: README.md
docs/progress_summaries/: 2026-05_2026-07.md
eval/: batch_eval.py  hello.py  schemas.py
experiments/: 00.py
src/sparq/: __main__.py  default_config.toml  logging_config.py  settings.py  setup.py  system.py
src/sparq/architectures/v1/: default_config.toml  settings.py  system.py
src/sparq/architectures/v1/nodes/: aggregator.py  executor.py  formatter.py  planner.py  router.py  saver.py
src/sparq/architectures/v1/prompts/: aggregator_message.txt  executor_message.txt  explorer_user_message.txt  router_message.txt
src/sparq/architectures/v1/prompts/archive/: aggregator_message_01.txt  explorer_message.txt  message_planner_3.txt  message_planner_4.txt  message_planner_5.txt  message_planner_6.txt  message_planner_old.txt  message_planner_old_old.rtf  planner_message.txt  (+4 more)
src/sparq/data/: data_manifest.json  data_summaries.json  data_summaries_short.json
src/sparq/nodes/: executor.py  planner.py
src/sparq/prompts/: executor_message.txt  planner_message.txt
src/sparq/prompts/archive/: planner_message_11.txt
src/sparq/schemas/: data_context.py  output_schemas.py  state.py
src/sparq/tools/: data_discovery_tools.py  tools.py
src/sparq/tools/python_repl/: ast_utils.py  executor.py  namespace.py  package_manager.py  python_repl_tool.py  schemas.py
src/sparq/utils/: download_data.py  get_llm.py  helpers.py
tests/: test_helpers.py  test_settings.py
tests/nodes/: test_saver.py
tests/tools/: test_ast_utils.py  test_executor.py  test_package_manager.py
tests/tools/python_repl/: test_tool.py
