[project]
name = "sparq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "huggingface-hub==0.32.3",
    "ipykernel==6.29.5",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-core==0.3.66",
    "langchain-experimental==0.3.4",
    "langchain-google-genai==2.1.5",
    "langchain-ollama==0.3.3",
    "langchain-openai==0.3.17",
    "langgraph==0.4.5",
    "langgraph-prebuilt==0.1.8",
    "langsmith==0.3.45",
    "numpy==2.2.6",
    "ollama==0.4.8",
    "openai==1.81.0",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "python-dotenv==1.1.0",
    "rich==14.0.0",
    "tabulate==0.9.0",
    "tiktoken==0.9.0",
    "tqdm==4.67.1",
    "langchain-aws",
    "appdirs==1.4.4",
    "boto3==1.40.55",
    "botocore==1.40.55",
    "cloudpickle>=3.1.2",
]
[project.scripts]
sparq = "sparq.__main__:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
