[project]
name = "sparq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "huggingface-hub==0.32.3",
    "ipykernel==6.29.5",
    "langchain==1.3.4",
    "langchain-community==0.4.2",
    "langchain-core==1.4.1",
    "langchain-google-genai==4.2.4",
    "langchain-ollama==1.1.0",
    "langchain-openai==1.2.2",
    "langgraph==1.2.4",
    "langgraph-prebuilt==1.1.0",
    "langsmith==0.8.9",
    "numpy==2.2.6",
    "ollama==0.6.2",
    "openai==2.41.0",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "python-dotenv==1.1.0",
    "rich==14.0.0",
    "tabulate==0.9.0",
    "tiktoken==0.9.0",
    "tqdm==4.67.1",
    "langchain-aws==1.5.0",
    "appdirs==1.4.4",
    "boto3==1.43.24",
    "botocore==1.43.24",
    "cloudpickle>=3.1.2",
    "pydantic-settings==2.13.1",
    "deepagents>=0.6.8",
]
[project.scripts]
sparq = "sparq.__main__:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
